# python-prj.init

./: README.md  cookiecutter.json
tests/: test_creation.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.py
