[project]
name = {{cookiecutter.project_name}}
version = "0.1.0"
description = "A brief description of your project"
authors = [{{cookiecutter.author_name}}@gmail.com]

[tool.black]
line-length = 100

[tool.codespell]
skip = '*.po,*.ts,./src/3rdParty,./src/Test'

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B105", "B311"]

[tool.vulture]
exclude = ["venv"]
make_whitelist = true
min_confidence = 100
paths = ["./",]
sort_by_size = true
